// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github integration addUserToGitHubOrg success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "invitee_id": 123,
        "org": "myorg",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`github integration getAuthenticatedOctokit 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "auth": Object {
          "appId": 123,
          "installationId": 123,
          "privateKey": "helloworld",
        },
        "authStrategy": [Function],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`github integration getGithubUsersFromGithub 1`] = `
Set {
  "chrisns",
  "bar",
  "foo",
  "pending",
  "anotherpending",
}
`;

exports[`github integration getUserIdFromUsername found 1`] = `123`;

exports[`github integration getUserIdFromUsername notfound 1`] = `"Unable to find user id for foo"`;

exports[`github integration removeUserFromGitHubOrg success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "org": "myorg",
        "username": "foo",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
